@@ -266,6 +266,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
   Special:Statistics
 * (bug 5949) Update to Indonesian localisation (id)
 * (bug 5862) Update of Belarusian translation (be)
+* (bug 5651) Disable section editing links for users who can't edit
 
 == Compatibility ==
 
